--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="gradient_start">#F76B1C</color>
+    <color name="gradient_end">#FAD961</color>
+    <color name="white">#FFFFFF</color>
+
 </resources>
