--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,17 +30,22 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <android.support.v7.widget.RecyclerView
+            android:id= "@+id/rvConstellation"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
     </LinearLayout>
 
 
-    <android.support.design.widget.NavigationView
-        android:id="@+id/nav_view"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:background="@drawable/background"
-        android:fitsSystemWindows="true"
-        app:menu="@menu/nav_body" />
+    <!--<android.support.design.widget.NavigationView-->
+        <!--android:id="@+id/nav_view"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:layout_gravity="start"-->
+        <!--android:background="@drawable/background"-->
+        <!--android:fitsSystemWindows="true"-->
+        <!--app:menu="@menu/nav_body" />-->
     <!--app:headerLayout="@layout/nav_header_side"-->
 
 </android.support.v4.widget.DrawerLayout>
