--- a/app/src/main/res/menu/nav_body.xml
+++ b/app/src/main/res/menu/nav_body.xml
@@ -12,27 +12,27 @@
         <item
             android:id="@+id/nav_configure"
             android:icon="@drawable/ic_add_to_photos_black_24dp"
-            android:title="Add a Recipe" />
-        <item
-            android:id="@+id/nav_search"
-            android:icon="@drawable/ic_search"
-            android:title="Search" />
+            android:title="Configure" />
+        <!--<item-->
+            <!--android:id="@+id/nav_search"-->
+            <!--android:icon="@drawable/ic_search"-->
+            <!--android:title="Search" />-->
         <item
             android:id="@+id/nav_move"
             android:icon="@drawable/ic_friends"
-            android:title="Find Friends" />
-        <item
-            android:id="@+id/nav_help"
-            android:icon="@drawable/ic_help"
-            android:title="Help" />
-        <item
-            android:id="@+id/nav_settings"
-            android:icon="@drawable/ic_settings"
-            android:title="Settings" />
-        <item
-            android:id="@+id/nav_logout"
-            android:icon="@drawable/ic_logout"
-            android:title="Log Out" />
+            android:title="Move" />
+        <!--<item-->
+            <!--android:id="@+id/nav_help"-->
+            <!--android:icon="@drawable/ic_help"-->
+            <!--android:title="Help" />-->
+        <!--<item-->
+            <!--android:id="@+id/nav_settings"-->
+            <!--android:icon="@drawable/ic_settings"-->
+            <!--android:title="Settings" />-->
+        <!--<item-->
+            <!--android:id="@+id/nav_logout"-->
+            <!--android:icon="@drawable/ic_logout"-->
+            <!--android:title="Log Out" />-->
     </group>
 
 
