--- a/app/src/main/res/layout/app_bar_side.xml
+++ b/app/src/main/res/layout/app_bar_side.xml
@@ -20,11 +20,14 @@
 
             <TextView
                 android:id="@+id/toolbar_title"
+                style="@style/header_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="STELA"
-                style="@style/header_text"/>
+                android:textColor="@color/appTitle"
+                android:textStyle="bold"
+                android:fontFamily="roboto"/>
 
         </android.support.v7.widget.Toolbar>
 
