--- a/app/src/main/res/menu/nav_body.xml
+++ b/app/src/main/res/menu/nav_body.xml
@@ -11,16 +11,16 @@
             android:title="Home" />
         <item
             android:id="@+id/nav_configure"
-            android:icon="@drawable/ic_add_to_photos_black_24dp"
-            android:title="Add a Recipe" />
+            android:icon="@drawable/ic_check_circle_black_24dp"
+            android:title="Calibration" />
         <item
             android:id="@+id/nav_search"
             android:icon="@drawable/ic_search"
             android:title="Search" />
         <item
             android:id="@+id/nav_move"
-            android:icon="@drawable/ic_friends"
-            android:title="Find Friends" />
+            android:icon="@drawable/ic_gps_not_fixed_black_24dp"
+            android:title="Manually Move" />
         <item
             android:id="@+id/nav_help"
             android:icon="@drawable/ic_help"
