--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#FFFFFF</color>
+    <color name="colorPrimaryDark">#FFFFFF</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="gradient_start">#4D05CB</color>
-    <color name="gradient_end">#1E17F3</color>
+    <color name="gradient_start">#FFFFFF</color>
+    <!--<color name="gradient_start">#4D05CB</color>-->
+    <color name="gradient_end">#FFFFFF</color>
+    <!--<color name="gradient_end">#1E17F3</color>-->
     <color name="white">#FFFFFF</color>
+    <color name="appTitle">#36c3e0</color>
+    <color name="appSubtitle">#84dcff</color>
 
 </resources>
