--- a/app/src/main/res/drawable-v24/background2.xml
+++ b/app/src/main/res/drawable-v24/background2.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:startColor="@color/gradient_start"
-        android:endColor="@color/gradient_end"
+        android:startColor="@color/gradient_start2"
+        android:endColor="@color/gradient_end2"
         android:angle="0" />
 </shape>
