--- a/app/src/main/res/drawable/background3.xml
+++ b/app/src/main/res/drawable/background3.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:startColor="@color/gradient_start1"
-        android:endColor="@color/gradient_end1"
-        android:angle="225" />
+        android:startColor="@color/night"
+        android:endColor="@color/night"
+        android:angle="0" />
 </shape>
