--- a/app/src/main/res/layout/app_bar_side.xml
+++ b/app/src/main/res/layout/app_bar_side.xml
@@ -24,6 +24,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="STELA"
+                android:textColor="white"
                 style="@style/header_text"/>
 
         </android.support.v7.widget.Toolbar>
