--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="title_text_size">18sp</dimen>
+    <dimen name="udl_udr_gap">90dp</dimen>
+    <dimen name="left_right_gap">180dp</dimen>
+    <dimen name="move_top_margin">50dp</dimen>
+    <dimen name="coord_button_separation">150dp</dimen>
+    <dimen name="coord_separation">50dp</dimen>
+    <dimen name="level_margin">15dp</dimen>
+    <dimen name="up_down_shift_margin">-20dp</dimen>
+
 </resources>
