--- a/app/src/main/res/layout/activity_move.xml
+++ b/app/src/main/res/layout/activity_move.xml
@@ -16,10 +16,9 @@
         android:layout_marginStart="84dp"
         android:layout_marginTop="147dp"
         android:ems="10"
-        android:hint="x Value"
+        android:hint="Alt"
         android:textColorHint="@color/buttonGrey"
-        android:textColor="@color/redText"
-        android:backgroundTint="@color/buttonGrey"
+        android:textColor="@color/colorAccent"
         android:inputType="number"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -34,10 +33,9 @@
         android:layout_marginEnd="85dp"
         android:layout_marginStart="84dp"
         android:ems="10"
-        android:hint="y Value"
+        android:hint="Azi"
         android:textColorHint="@color/buttonGrey"
-        android:textColor="@color/redText"
-        android:backgroundTint="@color/buttonGrey"
+        android:textColor="@color/colorAccent"
         android:inputType="number"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -54,6 +52,7 @@
         android:layout_marginTop="41dp"
         android:text="Move"
         android:onClick="onMove"
+        android:textColor="@color/colorAccent"
         android:backgroundTint="@color/buttonGrey"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
