--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,7 +35,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:background="@drawable/background"
+        android:background="@drawable/background2"
         android:fitsSystemWindows="true"
         app:itemTextColor="@color/appTitle"
         app:itemIconTint="@color/appSubtitle"
